--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,9 @@
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.6",
     "express": "^5.2.1",
-    "mongoose": "^9.2.1"
+    "jsonwebtoken": "^9.0.3",
+    "mercadopago": "^2.12.0",
+    "mongoose": "^9.2.1",
+    "nodemailer": "^8.0.1"
   }
 }
